--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -75,7 +75,7 @@
 .cart-promo-code-input button{
     width: max(10vw, 150px);
     padding: 12px 5px;
-    background-color: black;
+    background-color: tomato;
     border: none;
     color: white;
     border-radius: 4px;
